--- a/admin/src/web/templates/tags/form.html
+++ b/admin/src/web/templates/tags/form.html
@@ -20,7 +20,7 @@
     </div>
 
     {% if is_edit and current_slug %}
-    <p><strong>Slug actual:</strong> {{ current_slug }}</p>
+    <p class="form-note"><strong>Slug actual:</strong> {{ current_slug }}</p>
     {% endif %}
 
     <div class="form-actions">
