--- a/admin/src/web/templates/error.html
+++ b/admin/src/web/templates/error.html
@@ -7,7 +7,7 @@
     <h1>Error {{ error.code }}</h1>
     <h2> {{error.message}}</h2>
     <p>{{ error.description }}</p>
-    <a href="{{ url_for('home') }}" class"error-btn">Volver a inicio</a>
+    <a href="{{ url_for('home') }}" class="primary-button">Volver al inicio</a>
     </div>
 {% endblock %}
 
